# re-fine

./: .gitignore  .gitlab-ci.yml  Build.hs  Main.hs  NOTES  README.md  build  build.sh  stack-snapshot.yaml  stack.yaml  test-all.hs  test-all.sh
pkg/frontend/: Makefile  README.md  build.nix  cabal.config  default.nix  index-dev.html  index.html  package.json  refine-frontend.cabal  server.js  shell.nix  stack-js.yaml  stack-no-js.yaml  stack.yaml  webpack.config.js  webpack.prod.config.js
pkg/frontend/app/: Main.hs
pkg/frontend/bench/: Main.hs  rawContentConversionJSValVsAesonStrings.json
pkg/frontend/closure-compiler/: compiler-latest.getit.sh  compiler-latest.zip.SHA512
pkg/frontend/images/: README.md  create-image.sh  find-missing-images.sh
pkg/frontend/jsbits/: hookup.js  hookup_scss.js  spec-bits.js  test.js  util.js
pkg/frontend/nixpkgs/: github.json
pkg/frontend/react-hs/: default.nix
pkg/frontend/scss/: main.scss
pkg/frontend/scss-new/: 10-global.scss  20-colors-fill.scss  20-colors.scss  30-core.scss  40-scratch.scss  Makefile  README.md  _generic.icons.scss  main.scss  style.scss
pkg/frontend/scss-new/stylesheets/: _main.scss
pkg/frontend/scss-new/stylesheets/base/: _colors.scss  _vars.scss
pkg/frontend/scss-new/stylesheets/partials/: _color-classes.scss  _common.scss  _editor.scss  _menu.scss  _mixins.scss
pkg/frontend/scss/0-settings/: _.importer.scss  _settings.components.scss  _settings.fonts.scss  _settings.icons.scss  _settings.objects.scss  _settings.sharedvars.json  _settings.sharedvars.scss
pkg/frontend/scss/1-utils/: _.importer.scss  _utils.bourbon_bits.scss  _utils.mixins.scss  _utils.normalize.scss  _utils.reset.scss
pkg/frontend/scss/2-generic/: _.importer.scss  _generic.grid.scss  _generic.icons.scss  _generic.icons.scss.header  _generic.pagelayout.scss  _generic.typography.scss  generate_icons_scss
pkg/frontend/scss/3-objects/: _importer.scss  _objects.form-elements.scss  _objects.vdoc-colors.scss  _objects.vdoc-marks.scss  _objects.vdoc-snippets.scss  _objects.vdoc-tooltips.scss
pkg/frontend/scss/4-components/: _components.mainmenu-content.scss  _components.mainmenu.scss  _components.vdoc-overlay.scss  _components.vdoc-toolbar-extension.scss  _components.vdoc-toolbar.scss
pkg/frontend/scss/5-overrides/: _.importer.scss  _overrides.debug.scss  _overrides.icons.scss  _overrides.readmode.scss  _overrides.trumbowyg.scss
pkg/frontend/src/: import_frontend.hs  language.hs
pkg/frontend/src/React/Flux/: Missing.hs
pkg/frontend/src/Refine/Frontend/: Access.hs  CS.hs  Colors.hs  ErrorHandling.hs  Heading.hs  Icon.hs  ImageUpload.hs  MainMenu.hs  Mark.hs  NotImplementedYet.hs  Orphans.hs  Prelude.hs  Rest.hs  Route.hs  Store.hs  Store.hs-boot  Style.hs  TKey.hs  ThirdPartyViews.hs  Translation.hs  Types.hs  Util.hs  UtilityWidgets.hs  Views.hs  WebSocket.hs  WindowSize.hs  Workbench.hs
pkg/frontend/static/: hookup.js  hookup_scss.js
pkg/frontend/styleguide/: Main.hs
pkg/frontend/styleguide-new/: README.md  dashboard.php  discussion.php  editorpage1.php  editorpage2.php  forms.php  groupDetailsProcesses.php  index.php  mainMenuGroups--old.html  mainMenuGroups.php  menupage-dashboard.php  menupage-details.php  menupage-groups.php  menupage-newgroup.php
pkg/frontend/styleguide-new/includes/: common.php  groupDetailsProcesses-components.php  mainMenuGroups-components.php  page-footer-main.php  page-header-main.php
pkg/frontend/styleguide-new/includes/svgs/: daniel_test2.php  daniel_user__c.php  svgs.php  svgs1.php
pkg/frontend/styleguide-new/new/: common.php  content-box.php  content-box2.php  daniel_user.php  dashboard-item-tile-svg.php  dashboard-item-tile.php  document-tile-svg.php  document-tile.php  editorpage-header.php  group-tile-svg.php  group-tile.php  ibutton-with-number.php  menupage-header.php  menupage-top.php  tree-node.php
pkg/frontend/styleguide-new/svgs/: svgs.php
pkg/frontend/styleguide/drafts/: notes.md
pkg/frontend/styleguide/drafts/2017-09-15-meeting-fabian/: README.md
pkg/frontend/styleguide/html/: addEdit_.html  bubble_.discussion.active.desktop.html  bubble_.discussion.active.mobile.html  bubble_.edit.html  bubble_.stack.html  colorPalette.html  diffToolbar_.html  discussionToolbar_.flat.html  discussionToolbar_.tree.html  editToolbar_.html  index.html  login_.html  main.css  mainMenuGroup_.html  mainMenuGroups_.html  toolbar_.html  toy_.html
pkg/frontend/styleguide/html/menu/: login_.html  mainMenuGroup_.html  mainMenuGroups_.html
pkg/frontend/test/: AllModules.hs  Main.hs  Spec.hs
refine-frontend/: .babelrc  .gitignore  LICENSE  Makefile  README.md  package.json  package.yaml  refine-frontend.cabal  server.js  stack.yaml  webpack.config.js
refine-frontend/app/: Main.hs
refine-frontend/jsbits/: spec-bits.hs  test.js
refine-frontend/scss/: main.scss
refine-frontend/scss/0-settings/: _settings.colors.scss  _settings.components.scss  _settings.gridle.scss  _settings.icons.scss  _settings.typography.scss
refine-frontend/scss/1-utils/: _utils.bourbon.scss
refine-frontend/scss/2-generic/: _generic.grid.scss  _generic.icons.scss  _generic.pagelayout.scss
refine-frontend/scss/3-objects/: _objects.navigation.scss  _objects.vdoc-marks.scss  _objects.vdoc-quickcreate.scss
refine-frontend/scss/4-components/: _.importer.scss  _components.mainmenu-content.scss  _components.mainmenu.scss  _components.vdoc-header.scss  _components.vdoc-overlay.scss  _components.vdoc-toolbar-extension.scss  _components.vdoc-toolbar.scss
refine-frontend/scss/5-overrides/: _overrides.debug.scss  _overrides.icons.scss  _overrides.misc.scss
refine-frontend/src/Refine/Frontend/: Core.hs  Heading.hs  Mark.hs  Overlay.hs  RefineApi.hs  RefineStore.hs  RefineViews.hs  Rest.hs  StickyViews.hs  Store.hs  ThirdPartyViews.hs  Types.hs  Util.hs  UtilityWidgets.hs  Views.hs  WindowSize.hs
refine-frontend/static/: hookup.js
refine-frontend/test/: Spec.hs
refine-frontend/test/Refine/Frontend/: CoreSpec.hs  EnzymeSpec.hs  OverlaySpec.hs  RefineStoreSpec.hs  StoreSpec.hs  UtilityWidgetsSpec.hs
(+407 files in other folders)
