-- *NOT* created by hpack any more, because hpack does not support to
-- specify js-sources.
--
-- losely related: https://github.com/sol/hpack/issues/136

name:           refine-frontend
version:        0.0.0.0
synopsis:       Refine frontend
description:    Please see README.md
category:       Web
homepage:       https://github.com/fisx/refine
author:         Andor Penzes <andor.penzes@gmail.com>,
                Matthias Fischmann <mf@zerobuzz.net>,
                Nicole Rauch <info@nicole-rauch.de>
maintainer:     mf@zerobuzz.net
copyright:      2017-2022 zerobuzz.net
license:        AGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  ghc-options: -j -Wall -Werror
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , html-parse
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
  exposed-modules:
      -- we can't have hspec, but at least we have bash and find and perl...  :)
      -- find src -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Bubbles.Overlay
      Refine.Frontend.Bubbles.QuickCreate
      Refine.Frontend.Bubbles.Store
      Refine.Frontend.Bubbles.Types
      Refine.Frontend.Heading
      Refine.Frontend.Loader.Component
      Refine.Frontend.Mark
      Refine.Frontend.Rest
      Refine.Frontend.Store
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Samples
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.Types
      Refine.Frontend.UtilityWidgets
      Refine.Frontend.Views
      Refine.Frontend.WindowSize
  default-language: Haskell2010

executable refine-frontend
  main-is: Main.hs
  hs-source-dirs:
      src
    , app
  ghc-options: -j -Wall -Werror
  cpp-options: -DGHCJS_BROWSER
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , html-parse
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , hspec
    , hspec-discover
  other-modules:
      -- find src -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Bubbles.Overlay
      Refine.Frontend.Bubbles.QuickCreate
      Refine.Frontend.Bubbles.Store
      Refine.Frontend.Bubbles.Types
      Refine.Frontend.Heading
      Refine.Frontend.Loader.Component
      Refine.Frontend.Mark
      Refine.Frontend.Rest
      Refine.Frontend.Store
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Samples
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.Types
      Refine.Frontend.UtilityWidgets
      Refine.Frontend.Views
      Refine.Frontend.WindowSize
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
    , src
  ghc-options: -j -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , html-parse
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , base
    , hspec
    , hspec-core
    , hspec-discover
    , QuickCheck
    , quickcheck-instances
  other-modules:
      -- find src test -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Bubbles.Overlay
      Refine.Frontend.Bubbles.QuickCreate
      Refine.Frontend.Bubbles.QuickCreateSpec
      Refine.Frontend.Bubbles.Store
      Refine.Frontend.Bubbles.Types
      Refine.Frontend.Heading
      Refine.Frontend.Loader.Component
      Refine.Frontend.Mark
      Refine.Frontend.Rest
      Refine.Frontend.Store
      Refine.Frontend.StoreSpec
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Samples
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.Types
      Refine.Frontend.UtilityWidgets
      Refine.Frontend.UtilityWidgetsSpec
      Refine.Frontend.Views
      Refine.Frontend.WindowSize
  js-sources:
      jsbits/spec-bits.js
  default-language: Haskell2010
