-- *NOT* created by hpack any more, because hpack does not support to
-- specify js-sources.
--
-- losely related: https://github.com/sol/hpack/issues/136

name:           refine-frontend
version:        0.0.0.0
synopsis:       Refine frontend
description:    Please see README.md
category:       Web
homepage:       https://github.com/fisx/refine
author:         Andor Penzes <andor.penzes@gmail.com>,
                Matthias Fischmann <mf@zerobuzz.net>,
                Nicole Rauch <info@nicole-rauch.de>
maintainer:     mf@zerobuzz.net
copyright:      2017-2022 zerobuzz.net
license:        AGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  ghc-options: -j -Wall -Werror
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , html-parse
    , http-api-data
    , i18n
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , unordered-containers
  exposed-modules:
      -- we can't have hspec, but at least we have bash and find and perl...  :)
      -- find src -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Colors
      Refine.Frontend.Contribution.Bubble
      Refine.Frontend.Contribution.Dialog
      Refine.Frontend.Contribution.Mark
      Refine.Frontend.Contribution.QuickCreate
      Refine.Frontend.Contribution.Store
      Refine.Frontend.Contribution.Types
      Refine.Frontend.ErrorHandling
      Refine.Frontend.Header.DocumentHeader
      Refine.Frontend.Header.Heading
      Refine.Frontend.Header.Store
      Refine.Frontend.Header.Toolbar
      Refine.Frontend.Header.Types
      Refine.Frontend.Header.UserLoginLogout
      Refine.Frontend.Loader.Component
      Refine.Frontend.Login.Component
      Refine.Frontend.Login.Store
      Refine.Frontend.Login.Types
      Refine.Frontend.MainMenu.Component
      Refine.Frontend.MainMenu.Store
      Refine.Frontend.MainMenu.Types
      Refine.Frontend.NotImplementedYet
      Refine.Frontend.Rest
      Refine.Frontend.Screen.Calculations
      Refine.Frontend.Screen.Store
      Refine.Frontend.Screen.Types
      Refine.Frontend.Screen.WindowSize
      Refine.Frontend.Store
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Enzyme.Class
      Refine.Frontend.Test.Enzyme.Class.Internal
      Refine.Frontend.Test.Enzyme.Core
      Refine.Frontend.Test.Enzyme.ReactWrapper
      Refine.Frontend.Test.Enzyme.ShallowWrapper
      Refine.Frontend.Test.Samples
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.TKey
      Refine.Frontend.Translation.Store
      Refine.Frontend.Translation.Types
      Refine.Frontend.Types
      Refine.Frontend.UtilityWidgets
      Refine.Frontend.Views
  default-language: Haskell2010

executable refine-frontend
  main-is: Main.hs
  hs-source-dirs:
      src
    , app
  ghc-options: -j -Wall -Werror
  cpp-options: -DGHCJS_BROWSER
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , html-parse
    , http-api-data
    , i18n
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , hspec
    , hspec-discover
    , unordered-containers
  other-modules:
      -- find src -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Colors
      Refine.Frontend.Contribution.Bubble
      Refine.Frontend.Contribution.Dialog
      Refine.Frontend.Contribution.Mark
      Refine.Frontend.Contribution.QuickCreate
      Refine.Frontend.Contribution.Store
      Refine.Frontend.Contribution.Types
      Refine.Frontend.ErrorHandling
      Refine.Frontend.Header.DocumentHeader
      Refine.Frontend.Header.Heading
      Refine.Frontend.Header.Store
      Refine.Frontend.Header.Toolbar
      Refine.Frontend.Header.Types
      Refine.Frontend.Header.UserLoginLogout
      Refine.Frontend.Loader.Component
      Refine.Frontend.Login.Component
      Refine.Frontend.Login.Store
      Refine.Frontend.Login.Types
      Refine.Frontend.MainMenu.Component
      Refine.Frontend.MainMenu.Store
      Refine.Frontend.MainMenu.Types
      Refine.Frontend.NotImplementedYet
      Refine.Frontend.Rest
      Refine.Frontend.Screen.Calculations
      Refine.Frontend.Screen.Store
      Refine.Frontend.Screen.Types
      Refine.Frontend.Screen.WindowSize
      Refine.Frontend.Store
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Enzyme.Class
      Refine.Frontend.Test.Enzyme.Class.Internal
      Refine.Frontend.Test.Enzyme.Core
      Refine.Frontend.Test.Enzyme.ReactWrapper
      Refine.Frontend.Test.Enzyme.ShallowWrapper
      Refine.Frontend.Test.Samples
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.Translation.Store
      Refine.Frontend.Translation.Types
      Refine.Frontend.Types
      Refine.Frontend.UtilityWidgets
      Refine.Frontend.Views
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
    , src
  ghc-options: -j -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , html-parse
    , http-api-data
    , i18n
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , base
    , hspec
    , hspec-core
    , hspec-discover
    , QuickCheck
    , quickcheck-instances
    , unordered-containers
  other-modules:
      -- find src test -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Colors
      Refine.Frontend.Contribution.Bubble
      Refine.Frontend.Contribution.BubbleSpec
      Refine.Frontend.Contribution.Dialog
      Refine.Frontend.Contribution.DialogSpec
      Refine.Frontend.Contribution.Mark
      Refine.Frontend.Contribution.MarkSpec
      Refine.Frontend.Contribution.QuickCreate
      Refine.Frontend.Contribution.QuickCreateSpec
      Refine.Frontend.Contribution.Store
      Refine.Frontend.Contribution.StoreSpec
      Refine.Frontend.Contribution.Types
      Refine.Frontend.ErrorHandling
      Refine.Frontend.Header.DocumentHeader
      Refine.Frontend.Header.DocumentHeaderSpec
      Refine.Frontend.Header.Heading
      Refine.Frontend.Header.HeadingSpec
      Refine.Frontend.Header.Store
      Refine.Frontend.Header.Toolbar
      Refine.Frontend.Header.ToolbarSpec
      Refine.Frontend.Header.Types
      Refine.Frontend.Header.UserLoginLogout
      Refine.Frontend.Loader.Component
      Refine.Frontend.Login.Component
      Refine.Frontend.Login.Store
      Refine.Frontend.Login.Types
      Refine.Frontend.MainMenu.Component
      Refine.Frontend.MainMenuSpec
      Refine.Frontend.MainMenu.Store
      Refine.Frontend.MainMenu.Types
      Refine.Frontend.NotImplementedYet
      Refine.Frontend.Rest
      Refine.Frontend.Screen.Calculations
      Refine.Frontend.Screen.Store
      Refine.Frontend.Screen.Types
      Refine.Frontend.Screen.WindowSize
      Refine.Frontend.Store
      Refine.Frontend.StoreSpec
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Enzyme.Class
      Refine.Frontend.Test.Enzyme.Class.Internal
      Refine.Frontend.Test.Enzyme.Core
      Refine.Frontend.Test.Enzyme.ReactWrapper
      Refine.Frontend.Test.Enzyme.ShallowWrapper
      Refine.Frontend.Test.Samples
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.TKey
      Refine.Frontend.Translation.Store
      Refine.Frontend.Translation.Types
      Refine.Frontend.Types
      Refine.Frontend.UtilityWidgets
      Refine.Frontend.UtilityWidgetsSpec
      Refine.Frontend.Views
      Refine.Frontend.ViewsSpec
  js-sources:
      jsbits/test.js
      jsbits/util.js
      jsbits/hookup.js
  default-language: Haskell2010
