-- *NOT* created by hpack any more, because hpack does not support to
-- specify js-sources.
--
-- losely related: https://github.com/sol/hpack/issues/136

name:           refine-frontend
version:        0.0.0.0
synopsis:       Refine frontend
description:    Please see README.md
category:       Web
homepage:       https://github.com/fisx/refine
author:         Andor Penzes <andor.penzes@gmail.com>,
                Matthias Fischmann <mf@zerobuzz.net>,
                Nicole Rauch <info@nicole-rauch.de>
maintainer:     mf@zerobuzz.net
copyright:      2017-2022 zerobuzz.net
license:        AGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

-- (`stack build --ghc-options -Wwarn` does not override the
-- ghc-options set in the cabal targets below, so we work with a flag
-- instead.)
flag ghc-warn-error
  default: True

library
  hs-source-dirs:
      src
  ghc-options: -j -Wall
  if flag(ghc-warn-error)
      ghc-options: -Werror
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , data-default
    , deepseq
    , functor-infix
    , ghcjs-base
    , hspec
    , html-parse
    , http-api-data
    , i18n
    , json-sop
    , lens
    , mtl
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , transformers
    , unordered-containers
  exposed-modules:
      -- we can't have hspec, but at least we have bash and find and perl...  :)
      -- find src -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      Refine.Frontend.Colors
      Refine.Frontend.Contribution.Bubble
      Refine.Frontend.Contribution.Dialog
      Refine.Frontend.Contribution.Mark
      Refine.Frontend.Contribution.QuickCreate
      Refine.Frontend.Contribution.Store
      Refine.Frontend.Contribution.Types
      Refine.Frontend.CS
      Refine.Frontend.Document.Document
      Refine.Frontend.Document.FFI
      Refine.Frontend.Document.FFI.Types
      Refine.Frontend.Document.Store
      Refine.Frontend.Document.Types
      Refine.Frontend.Document.VDoc
      Refine.Frontend.Header.DocumentHeader
      Refine.Frontend.Header.EditToolbar
      Refine.Frontend.Header.Heading
      Refine.Frontend.Header.Store
      Refine.Frontend.Header.Toolbar
      Refine.Frontend.Header.Types
      Refine.Frontend.Header.UserLoginLogout
      Refine.Frontend.Icon
      Refine.Frontend.Icon.Types
      Refine.Frontend.Loader.Component
      Refine.Frontend.Login.Component
      Refine.Frontend.Login.Store
      Refine.Frontend.Login.Types
      Refine.Frontend.MainMenu.Component
      Refine.Frontend.MainMenu.Store
      Refine.Frontend.MainMenu.Types
      Refine.Frontend.NotImplementedYet
      Refine.Frontend.Rest
      Refine.Frontend.Screen.Calculations
      Refine.Frontend.Screen.Store
      Refine.Frontend.Screen.Types
      Refine.Frontend.Screen.WindowSize
      Refine.Frontend.Store
      Refine.Frontend.Store.Types
      Refine.Frontend.Style
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Enzyme.Class
      Refine.Frontend.Test.Enzyme.Class.Internal
      Refine.Frontend.Test.Enzyme.Core
      Refine.Frontend.Test.Enzyme.ReactWrapper
      Refine.Frontend.Test.Enzyme.ShallowWrapper
      Refine.Frontend.Test.Samples
      Refine.Frontend.Test.Store
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.TKey
      Refine.Frontend.Translation.Store
      Refine.Frontend.Types
      Refine.Frontend.Util
      Refine.Frontend.Views
      Refine.Frontend.Views.Types
  default-language: Haskell2010

executable refine-frontend
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -j -Wall
  if flag(ghc-warn-error)
      ghc-options: -Werror
  cpp-options: -DGHCJS_BROWSER
  build-depends:
      base >= 4.7 && < 5
    , react-flux
    , refine-frontend
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -j -Wall -threaded -rtsopts -with-rtsopts=-N
  if flag(ghc-warn-error)
      ghc-options: -Werror
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , ghcjs-base
    , hspec
    , hspec-core
    , hspec-discover
    , html-parse
    , http-api-data
    , i18n
    , json-sop
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-flux
    , react-flux-servant
    , refine-common
    , refine-frontend
    , refine-prelude
    , string-conversions
    , text
    , unordered-containers
  other-modules:
      -- (echo '      Spec'; (find test -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \;)) | sort
      Main
      Refine.Frontend.Contribution.BubbleSpec
      Refine.Frontend.Contribution.DialogSpec
      Refine.Frontend.Contribution.MarkSpec
      Refine.Frontend.Contribution.QuickCreateSpec
      Refine.Frontend.Contribution.StoreSpec
      Refine.Frontend.Document.DocumentSpec
      Refine.Frontend.Header.DocumentHeaderSpec
      Refine.Frontend.Header.HeadingSpec
      Refine.Frontend.Header.ToolbarSpec
      Refine.Frontend.IconSpec
      Refine.Frontend.MainMenuSpec
      Refine.Frontend.StoreSpec
      Refine.Frontend.UtilSpec
      Refine.Frontend.ViewsSpec
      Spec
  js-sources:
      jsbits/test.js
      jsbits/util.js
      jsbits/hookup.js
  default-language: Haskell2010
