-- *NOT* created by hpack any more, because hpack does not support to
-- specify js-sources.
--
-- losely related: https://github.com/sol/hpack/issues/136

name:           refine-frontend
version:        0.0.0.0
synopsis:       Refine frontend
description:    Please see README.md
category:       Web
homepage:       https://github.com/fisx/refine
author:         Andor Penzes <andor.penzes@gmail.com>,
                Matthias Fischmann <mf@zerobuzz.net>,
                Nicole Rauch <info@nicole-rauch.de>
maintainer:     mf@zerobuzz.net
copyright:      2017-2022 zerobuzz.net
license:        AGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

flag ghc-warn-error
  default: True

flag ghc-O2
  default: True

flag build-refine-frontend
  default: True

flag build-spec
  default: True

flag build-styleguide
  default: True

flag build-bench
  default: True

library
  hs-source-dirs:
      src
  include-dirs:
      src
  ghc-options: -j -Wall -Wno-redundant-constraints -Wno-unused-imports
  if flag(ghc-warn-error)
      ghc-options: -Werror
  if flag(ghc-O2)
      ghc-options: -O2
  else
      ghc-options: -O0

  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub

  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , data-default
    , deepseq
    , functor-infix
    , hspec
    , http-api-data
    , i18n
    , json-sop
    , language-css
    , lens
    , mtl
    , pretty-show
    , QuickCheck
    , quickcheck-instances
    , random
    , react-hs
    , refine-common
    , refine-prelude
    , string-conversions
    , text
    , time
    , transformers
    , unordered-containers
  exposed-modules:
      -- we can't have hspec, but at least we have bash and find and perl...  :)
      -- find src -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \; | sort
      React.Flux.Missing
      Refine.Frontend.Access
      Refine.Frontend.Contribution.Bubble
      Refine.Frontend.Contribution.Dialog
      Refine.Frontend.Contribution.Discussion
      Refine.Frontend.Contribution.QuickCreate
      Refine.Frontend.Contribution.Store
      Refine.Frontend.Contribution.Types
      Refine.Frontend.CS
      Refine.Frontend.Document.Document
      Refine.Frontend.Document.FFI
      Refine.Frontend.Document.FFI.Types
      Refine.Frontend.Document.Store
      Refine.Frontend.Document.Types
      Refine.Frontend.Header.DiffToolbar
      Refine.Frontend.Header.DiscussionToolbar
      Refine.Frontend.Header.DocumentHeader
      Refine.Frontend.Header.EditToolbar
      Refine.Frontend.Header.Heading
      Refine.Frontend.Header.Store
      Refine.Frontend.Header.Toolbar
      Refine.Frontend.Header.Types
      Refine.Frontend.Icon
      Refine.Frontend.Icon.Svg
      Refine.Frontend.Icon.Svg.Internal
      Refine.Frontend.Icon.Types
      Refine.Frontend.ImageUpload
      Refine.Frontend.Login.Component
      Refine.Frontend.Login.Status
      Refine.Frontend.Login.Types
      Refine.Frontend.MainMenu.Component
      Refine.Frontend.MainMenu.Store
      Refine.Frontend.MainMenu.Types
      Refine.Frontend.Orphans
      Refine.Frontend.Prelude
      Refine.Frontend.Route
      Refine.Frontend.Screen.Calculations
      Refine.Frontend.Screen.Store
      Refine.Frontend.Screen.Types
      Refine.Frontend.Screen.WindowSize
      Refine.Frontend.Store
      Refine.Frontend.Store.Types
      Refine.Frontend.Test.Console
      Refine.Frontend.Test.Debug
      Refine.Frontend.Test.Enzyme
      Refine.Frontend.Test.Enzyme.Class
      Refine.Frontend.Test.Enzyme.Class.Internal
      Refine.Frontend.Test.Enzyme.Core
      Refine.Frontend.Test.Enzyme.ReactWrapper
      Refine.Frontend.Test.Enzyme.ShallowWrapper
      Refine.Frontend.Test.Marshal
      Refine.Frontend.Test.Store
      Refine.Frontend.ThirdPartyViews
      Refine.Frontend.TKey
      Refine.Frontend.Translation.Store
      Refine.Frontend.Types
      Refine.Frontend.Util
      Refine.Frontend.Views
      Refine.Frontend.Views.Types
      Refine.Frontend.WebSocket
  default-language: Haskell2010

executable refine-frontend
  If !flag(build-refine-frontend)
    Buildable: False
  main-is: Main.hs
  hs-source-dirs: app
  include-dirs: src
  ghc-options: -j -Wall -Wno-redundant-constraints -Wno-unused-imports
  if flag(ghc-warn-error)
      ghc-options: -Werror

  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub

  cpp-options: -DGHCJS_BROWSER
  build-depends:
      base >= 4.7 && < 5
    , react-hs
    , refine-frontend
  default-language: Haskell2010

test-suite spec
  If !flag(build-spec)
    Buildable: False
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  include-dirs:
      src
  ghc-options: -j -Wall -Wno-redundant-constraints -Wno-unused-imports -threaded -rtsopts -with-rtsopts=-N
  if flag(ghc-warn-error)
      ghc-options: -Werror

  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub

  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , hspec
    , hspec-core
    , http-api-data
    , i18n
    , json-sop
    , language-css
    , lens
    , QuickCheck
    , quickcheck-instances
    , react-hs
    , refine-common
    , refine-frontend
    , refine-prelude
    , string-conversions
    , text
    , time
    , unordered-containers
  other-modules:
      -- (echo '      Spec'; (find test -name '*.hs' -exec perl -ne '/^module (\S+)[^\S]/ && print "      $1\n"' {} \;)) | sort
      AllModules
      Main
      Refine.Frontend.AccessSpec
      Refine.Frontend.Contribution.BubbleSpec
      Refine.Frontend.Contribution.DialogSpec
      Refine.Frontend.Contribution.DiscussionSpec
      Refine.Frontend.Contribution.QuickCreateSpec
      Refine.Frontend.Document.DocumentSpec
      Refine.Frontend.Header.DocumentHeaderSpec
      Refine.Frontend.Header.HeadingSpec
      Refine.Frontend.Header.ToolbarSpec
      Refine.Frontend.IconSpec
      Refine.Frontend.MainMenuSpec
      Refine.Frontend.OrphansSpec
      Refine.Frontend.RouteSpec
      Refine.Frontend.StoreSpec
      Refine.Frontend.ThirdPartyViewsSpec
      Refine.Frontend.UtilSpec
      Refine.Frontend.ViewsSpec
      Spec
  js-sources:
      jsbits/hookup.js
      jsbits/util.js
      jsbits/test.js
  default-language: Haskell2010

test-suite styleguide
  If !flag(build-styleguide)
    Buildable: False
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      styleguide
  include-dirs:
      src
  ghc-options: -j -Wall -Wno-redundant-constraints -Wno-unused-imports -threaded -rtsopts -with-rtsopts=-N
  if flag(ghc-warn-error)
      ghc-options: -Werror

  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub

  build-depends:
      aeson
    , base >= 4.7 && < 5
    , basic-sop
    , containers
    , deepseq
    , directory
    , filepath
    , hspec
    , hspec-core
    , http-api-data
    , i18n
    , json-sop
    , language-css
    , lens
    , pretty
    , process
    , QuickCheck
    , quickcheck-instances
    , react-hs
    , refine-common
    , refine-frontend
    , refine-prelude
    , string-conversions
    , text
    , time
    , unordered-containers
  js-sources:
      jsbits/hookup.js
      jsbits/util.js
      jsbits/test.js
  default-language: Haskell2010

-- `stack bench` seems not to work with ghcjs
--
-- to run the benchmark, first build it with `stack bench`
-- then run "node `stack path --dist-dir`/build/bench/bench.jsexe/all.js"
benchmark bench
  If !flag(build-bench)
    Buildable: False
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      bench
  ghc-options: -j -Wall -Wno-redundant-constraints -Wno-unused-imports -threaded -rtsopts -with-rtsopts=-N
  if flag(ghc-warn-error)
      ghc-options: -Werror

  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , containers
    , deepseq
    , QuickCheck
    , refine-common
    , refine-frontend
    , string-conversions
    , time
  js-sources:
      jsbits/hookup.js
      jsbits/util.js
      jsbits/test.js
  default-language: Haskell2010
